bin_PROGRAMS = helloworld signed test_format derived_types first_program \
sample_input

helloworld_SOURCES = helloworld.f90
signed_SOURCES = signed.f90
test_format_SOURCES = test_format.f90
derived_types_SOURCES = derived_types.f90
first_program_SOURCES = first_program.f90
sample_input_SOURCES = sample_input.f90
